# stripe_connect

./: config.py  pyproject.toml
payments/: urls.py  views.py
static/: main.js
stripe_connect/: settings.py  urls.py
